--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -25,16 +25,13 @@ body {
 /* HEADER */
 
 header {
-   margin-top: 30px;
-   margin-bottom: 30px;
+   margin: 30px 0;
    justify-content: center;
    position: relative;
 }
 
 header img {
-   margin-left: 20px;
-   margin-right: 150px;
-
+   margin-right: 123px;
    vertical-align: middle;
 }
 
@@ -43,7 +40,83 @@ header a {
    padding-left: 30px;
 }
 
-.card img {
+/* PRESENTATION CARD */
+
+.presentation-container {
+   background-color: #FBDFDB;
+   
+   position: relative;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+
+   width: 100%;
+   height: 366px;
+
+   border-radius: 30px;
+   margin-bottom: 50px;
+}
+
+.presentation-container .presentation-message {
+   margin-left: 60px;
+
+}
+
+.presentation-container .presentation-message h1 {
+   font-size: 32px;
+   color: #111111;
+
+   margin-top: 115px;
+}
+
+.presentation-container .presentation-message p {
+   font-size: 18px;
+   line-height: 28px;
+   opacity: 0.7;
+
+   margin-top: 10px;
+}
+
+.presentation-container img {
+   width: 216px;
+   height: 300px;
+
+   position: absolute;
+   right: 100px;
+   bottom: 0;
+}
+
+/* MOST-ACCESSED */
+
+.most-accessed h2 {
+   font-size: 24px;
+   font-weight: bold;
+
+   margin-bottom: 20px;
+}
+
+.most-accessed .cards ul {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   grid-gap: 20px;
+}
+
+.most-accessed .cards .card img {
    width: 300px;
    height: 140px;
+
+   border-radius: 15px;
+   margin-bottom: 20px;
+}
+
+.most-accessed .cards .card a {
+   font-size: 18px;
+   color: #111111;
+
+   padding-bottom: 5px;
+}
+
+
+.most-accessed .cards .card p {
+   font-size: 14px;
+   color: #777777;
 }
