--- a/src/app/views/recipes/show.njk
+++ b/src/app/views/recipes/show.njk
@@ -1,5 +1,37 @@
 {% extends "layout.njk" %}
 
 {% block content %}
+<div class="show-container">
+   <div class="recipe-img-box">
+      <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
+   </div>
+
+   <div class="recipe-title">
+      <h1>{{ recipe.title }}</h1>
+      <h2>por {{ recipe.author }}</h2>
+   </div>
+
+   <div class="recipe">
+   
+      <div class="ingredients">
+         <h3>Ingredientes:</h3>
+         <p>{{ recipe.ingredients }}</p>
+      </div>
+
+      <div class="preparation">
+         <h3>Modo de preparo:</h3>
+         <p>{{ recipe.preparation }}</p>
+      </div>
+
+      <div class="information">
+         <h3>Informações adicionais:</h3>
+         <p>{{ recipe.information }}</p>
+      </div>
+
+   </div>
+
+</div>
+
+
 
 {% endblock %}
