--- a/public/styles.css
+++ b/public/styles.css
@@ -40,7 +40,9 @@ header a {
    padding-left: 30px;
 }
 
-/* PRESENTATION CARD */
+/** INDEX **/
+
+/* presentation card */
 
 .presentation-container {
    background-color: #FBDFDB;
@@ -85,7 +87,7 @@ header a {
    bottom: 0;
 }
 
-/* MOST-ACCESSED */
+/* most-accessed */
 
 .most-accessed h2 {
    font-size: 24px;
@@ -106,6 +108,9 @@ header a {
 
    border-radius: 15px;
    margin-bottom: 20px;
+
+   object-fit: cover;
+   cursor: pointer;
 }
 
 .most-accessed .cards .card a {
@@ -119,4 +124,62 @@ header a {
 .most-accessed .cards .card p {
    font-size: 14px;
    color: #777777;
+}
+
+/** RECIPES SHOW **/
+
+/* presentation */
+
+.show-container img {
+   border-radius: 15px;
+   margin-bottom: 50px;
+}
+
+.show-container .presentation {
+   text-align: center;
+}
+
+.show-container .presentation h1 {
+   font-size: 36px;
+}
+
+.show-container .presentation h3 {
+   font-size: 20px;
+   font-weight: normal;
+   color: #777777;
+
+   margin-bottom: 50px;
+}
+
+/* recipe */
+
+.recipe h3 {
+   font-size: 24px;
+
+   margin-bottom: 20px;
+}
+
+.recipe li {
+   list-style-type: disc;
+   list-style-position: inside;
+   
+   font-size: 18px;
+   line-height: 28px;
+   color: #444444;
+
+   margin-bottom: 6px;
+}
+
+.recipe ul:last-child {
+   margin-bottom: 39px;
+}
+
+.recipe p {
+   font-size: 18px;
+   line-height: 28px;
+   color: #444444;
+}
+
+.recipe .information {
+   margin-bottom: 50px;
 }
