--- a/src/app/views/recipes/show.njk
+++ b/src/app/views/recipes/show.njk
@@ -2,25 +2,31 @@
 
 {% block content %}
 <div class="show-container">
-   <div class="recipe-img-box">
-      <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
-   </div>
+   <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
 
-   <div class="recipe-title">
+   <div class="presentation">
       <h1>{{ recipe.title }}</h1>
-      <h2>por {{ recipe.author }}</h2>
+      <h3>por {{ recipe.author }}</h3>
    </div>
 
    <div class="recipe">
    
       <div class="ingredients">
          <h3>Ingredientes:</h3>
-         <p>{{ recipe.ingredients }}</p>
+         <ul>
+            {% for ingredient in recipe.ingredients %}
+            <li>{{ ingredient }}</li>
+            {% endfor %}
+         </ul>
       </div>
 
       <div class="preparation">
          <h3>Modo de preparo:</h3>
-         <p>{{ recipe.preparation }}</p>
+         <ul>
+            {% for step in recipe.preparation %}
+            <li>{{ step }}</li>
+            {% endfor %}
+         </ul>
       </div>
 
       <div class="information">
@@ -29,7 +35,6 @@
       </div>
 
    </div>
-
 </div>
 
 
