--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -9,12 +9,20 @@
    {% endblock %}
 </head>
 <body>
-   <header>
-      <img src="/images/logo.png" alt="">
-      <a href="#">Sobre</a>
-      <a href="#">Receitas</a>
-   </header>
+   <div class="container">
+      <header>
+         <a href="/">
+            <img src="/images/logo.png" alt="">
+         </a>
+         <a href="#">Sobre</a>
+         <a href="#">Receitas</a>
+      </header>
+   </div>
 
    {% block content %}{% endblock %}
+
+   <footer>
+      <p>Todos os direitos reservado à FoodFy</p>
+   </footer>
 </body>
 </html>
