Implementing home index unique header

--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -2,6 +2,14 @@
 
 {% block content %}
 <div class="container">
+   <header id="home-header">
+      <a href="/">
+         <img src="/images/logo-home.png" alt="">
+      </a>
+      <a href="#">Sobre</a>
+      <a href="/admin/recipes">Receitas</a>
+   </header>
+   
    <section class="presentation-card">
       <div class="presentation-message">
          <h1>As melhores receitas</h1>
