Changing HTML structure

--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -22,6 +22,7 @@
    </section>
    <section class="most-accessed">
       <h2>Mais acessadas</h2>
+      <div class="square"></div>
       <div class="cards">
          <ul>
             {% for recipe in recipes %}
