--- a/public/styles.css
+++ b/public/styles.css
@@ -30,269 +30,5 @@ body {
    width: 940px;
 
    flex: 1 0 auto;
-   margin: 0 auto;
-}
-
-/* GENERAL HEADER */
-
-#general-header {
-   background-color: #0f0e0e;
-
-   padding: 40px 0;
-   margin-bottom: 50px;
-   
-   position: relative;
-}
-
-#general-header img {
-   margin-left: 231px;
-   vertical-align: middle;
-}
-
-/* FOOTER */
-
-footer {
-   padding: 31px 0;
-   width: 100%;
-
-   background: #eeeeee;
-
-   text-align: center;
-   flex-shrink: 0;
-}
-
-footer p {
-   margin-top: auto;
-   font-size: 14px;
-   color: #999999;
-}
-
-/** HOME **/
-
-/* presentation card */
-
-.container #home-header {
-   padding-top: 30px;
-   margin-bottom: 30px;
-   
-   justify-content: center;
-   position: relative;
-}
-
-.container #home-header > a:nth-child(1) {
-   padding-left: 0;
-}
-
-.container #home-header img {
-   margin-right: 123px;
-   vertical-align: middle;
-}
-
-.container #home-header a {
-   color: #111111;
-   padding-left: 30px;
-}
-
-.presentation-card {
-   background-color: #FBDFDB;
-   
-   position: relative;
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-
-   width: 100%;
-   height: 366px;
-
-   border-radius: 30px;
-   margin-bottom: 50px;
-}
-
-.presentation-card .presentation-message {
-   margin-left: 60px;
-
-}
-
-.presentation-card .presentation-message h1 {
-   font-size: 32px;
-   color: #111111;
-
-   margin-top: 115px;
-}
-
-.presentation-card .presentation-message p {
-   font-size: 18px;
-   line-height: 28px;
-   opacity: 0.7;
-
-   margin-top: 10px;
-}
-
-.presentation-card img {
-   width: 216px;
-   height: 300px;
-
-   position: absolute;
-   right: 100px;
-   bottom: 0;
-}
-
-/* most-accessed */
-
-.most-accessed h2 {
-   font-size: 24px;
-   font-weight: bold;
-
-   margin-bottom: 20px;
-}
-
-.most-accessed .cards ul {
-   display: grid;
-   grid-template-columns: repeat(3, 1fr);
-   grid-gap: 20px;
-
-   margin-bottom: 50px;
-}
-
-.most-accessed .cards .card img {
-   width: 300px;
-   height: 140px;
-
-   border-radius: 15px;
-   margin-bottom: 20px;
-
-   object-fit: cover;
-   cursor: pointer;
-}
-
-.most-accessed .cards .card a {
-   font-size: 18px;
-   color: #111111;
-
-   padding-bottom: 5px;
-}
-
-
-.most-accessed .cards .card p {
-   font-size: 14px;
-   color: #777777;
-}
-
-/** RECIPES SHOW **/
-
-/* presentation */
-
-.container.show img {
-   border-radius: 15px;
-   margin-bottom: 50px;
-}
-
-.show .presentation {
-   text-align: center;
-}
-
-.show .presentation h1 {
-   font-size: 36px;
-}
-
-.show .presentation h3 {
-   font-size: 20px;
-   font-weight: normal;
-   color: #777777;
-
-   margin-bottom: 50px;
-}
-
-/* recipe */
-.recipe h3 {
-   font-size: 24px;
-
-   display: inline;
-}
-
-.clickable {
-   color: #999999;
-   font-size: 12px;
-   font-weight: normal;
-   cursor: pointer;
-
-   margin-left: 8px;
-}
-
-.recipe li {
-   list-style-type: disc;
-   list-style-position: inside;
-   
-   font-size: 18px;
-   line-height: 28px;
-   color: #444444;
-
-   margin-bottom: 6px;
-}
-
-.recipe ul:last-child {
-   margin-bottom: 39px;
-}
-
-.recipe p {
-   font-size: 18px;
-   line-height: 28px;
-   color: #444444;
-}
-
-.recipe .information {
-   margin-bottom: 50px;
-}
-
-/* hide element */
-
-.hide {
-   opacity: 0;
-   height: 0;
-   margin-bottom: 150px;
-}
-
-/** RECIPES INDEX **/
-
-.recipes-container h2 {
-   font-size: 24px;
-   color: #111111;
-
-   margin-bottom: 30px;
-}
-
-#recipe-list {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-}
-
-#recipe-list .recipe-card {
-   display: grid;
-   grid-template-columns: 172px 1fr;
-   grid-column-gap: 20px;
-   
-   margin-bottom: 20px;
-}
-
-#recipe-list .recipe-card img {
-   width: 172px;
-   height: 80px;
-
-   border-radius: 8.5px;
-}
-
-#recipe-list .recipe-card .card-info h3 {
-   font-size: 18px;
-   font-weight: normal;
-}
-
-#recipe-list .recipe-card .card-info p {
-   font-size: 14px;
-   color: #777777;
-
-   margin-bottom: 10px;
-}
-
-#recipe-list .recipe-card .card-info a {
-   font-size: 14px;
-   color: #6558c3;
+   margin: 0 230px;
 }
