--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
    {% block head %}
+   
    <title>Foodfy</title>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="/styles.css">
+   
+   {% include "parts/styles.njk" %}
+   
    {% endblock %}
 </head>
 <body>
