--- a/public/styles/recipes.css
+++ b/public/styles/recipes.css
@@ -119,3 +119,82 @@
 }
 
 /** RECIPE CREATE **/
+
+.create-container {
+   position: relative;
+}
+
+.create-container h2 {
+   font-size: 24px;
+   font-weight: bold;
+
+   margin-bottom: 30px;
+}
+
+.item-title {
+   font-size: 16px;
+   font-weight: bold;
+
+   margin-bottom: 10px;
+}
+
+.item input {
+   height: 49px;
+   width: 100%;
+
+   border: 1px solid #DDDDDD;
+   border-radius: 4px;
+   margin-bottom: 5px;
+
+   font-size: 16px;
+   padding-left: 10px;
+   color: rgb(110, 110, 110) ;
+}
+
+.item:first-child {
+   margin-bottom: 30px;
+}
+
+.item .add {
+   font-size: 14px;
+   color: #6558C3;
+
+   margin-bottom: 40px;
+}
+
+.item .add:hover {
+   filter: brightness(120%);
+   cursor: pointer;
+   transition: all 300ms;
+}
+
+.item textarea {
+   width: 100%;
+   height: 257px;
+
+   border: 1px solid #DDDDDD;
+   border-radius: 4px;
+   margin-bottom: 50px;
+}
+
+.card button {
+   background: #6558C3;
+   border-radius: 4px;
+
+   height: 37px;
+   width: 139px;
+
+   font-size: 16px;
+   color: #FFFFFF;
+
+   position: absolute;
+   top: 0;
+   right: 0;
+}
+
+.card button:hover {
+   opacity: 0.8;
+   cursor: pointer;
+
+   transition: all 500ms;
+}
