--- a/src/app/views/recipes/create.njk
+++ b/src/app/views/recipes/create.njk
@@ -4,57 +4,13 @@
 
 {% include "parts/header.njk" %}
 
-<div class="container create-container">
+<div class="container fields-container">
    <h2>Criando receita</h2>
 
    <form class="card" method="POST" action="/admin/recipes">
-      <div class="item">
-         <div class="item-title">Imagem da receita</div>
-         <div>
-            <input 
-               type="url"
-               name="recipe_img"
-               placeholder="http://"
-            >
-         </div>
-      </div>
-
-      <div class="item">
-         <div class="item-title">Ingredientes</div>
-         <div id="ingredients">
-            <div class="ingredient">
-               <input 
-                  type="text"
-                  name="ingredients[]"
-                  placeholder="200g de mussarela"
-               >
-            </div>
-         </div>
-         <div class="add" id="add-ingredient">Adicionar ingrediente</div>
-      </div>
-
-      <div class="item">
-         <div class="item-title">Modo de preparo</div>
-         <div id="steps">
-            <div class="step">
-               <input 
-                  type="text"
-                  name="steps[]"
-                  placeholder="Primeiro, corte a mussarela em cubinhos..."
-               >
-            </div>
-         </div>
-         <div class="add" id="add-step">Adicionar passo</div>
-      </div>
-
-      <div class="item">
-         <div class="item-title">Informações adicionais</div>
-         <div>
-            <textarea name="aditional_info" cols="30" rows="10"></textarea>
-         </div>
-      </div>
-
-      <button type="submit">Salvar</button>
+      
+      {% include "recipes/fields.njk" %}
+      
    </form>
 </div>
 
