New field, title

--- a/public/styles/recipes.css
+++ b/public/styles/recipes.css
@@ -155,6 +155,10 @@
    margin-bottom: 30px;
 }
 
+#title-input {
+   margin-bottom: 30px;
+}
+
 .item .add {
    font-size: 14px;
    color: #6558C3;
