--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/styles/styles.css">
 <link rel="stylesheet" href="/styles/home.css">
 <link rel="stylesheet" href="/styles/parts.css">
+<link rel="stylesheet" href="/styles/fields.css">
 <link rel="stylesheet" href="/styles/recipes.css">
