--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -1,13 +1,14 @@
 {% extends "layout.njk" %}
 
 {% block content %}
+
 <div class="container">
    <header id="home-header">
       <a href="/">
          <img src="/images/logo-home.png" alt="">
       </a>
       <a href="#">Sobre</a>
-      <a href="/admin/recipes">Receitas</a>
+      <a href="/recipes">Receitas</a>
    </header>
    
    <section class="presentation-card">
@@ -38,4 +39,5 @@
       </div>
    </section>
 </div>
+
 {% endblock %}
