Implementing chef's creation

--- a/src/app/views/chefs/fields.njk
+++ b/src/app/views/chefs/fields.njk
@@ -3,9 +3,9 @@
    <div>
       <input 
          type="text"
-         name="title"
-         value="{{recipe.title}}"
-         placeholder="Cheese sandwich"
+         name="name"
+         value="{{chef.name}}"
+         placeholder="Fulano da Silva"
       >
    </div>
 </div>
@@ -16,7 +16,7 @@
       <input 
          type="url"
          name="image"
-         value="{{recipe.image}}"
+         value="{{chef.image}}"
          placeholder="http://"
       >
    </div>
