Implementing chef's index frontend

--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -3,3 +3,4 @@
 <link rel="stylesheet" href="/styles/parts.css">
 <link rel="stylesheet" href="/styles/fields.css">
 <link rel="stylesheet" href="/styles/recipes.css">
+<link rel="stylesheet" href="/styles/chefs.css">
