--- a/src/app/views/recipes/show.njk
+++ b/src/app/views/recipes/show.njk
@@ -8,8 +8,8 @@
    <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
 
    <div class="presentation">
-      <h1>{{ recipe.title }}</h1>
-      <h3>por {{ recipe.author }}</h3>
+      <h1>{{recipe.title}}</h1>
+      <h3>por {{recipe.chef_name}}</h3>
    </div>
 
    <div class="recipe">
@@ -18,7 +18,7 @@
          <a id="ingredient-clickable" class="clickable">Esconder</a>
          <ul id="ingredient-content">
             {% for ingredient in recipe.ingredients %}
-            <li>{{ ingredient }}</li>
+            <li>{{ingredient}}</li>
             {% endfor %}
          </ul>
       </div>
@@ -28,7 +28,7 @@
          <a id="preparation-clickable" class="clickable">Esconder</a>
          <ul id="preparation-content">
             {% for step in recipe.preparation %}
-            <li>{{ step }}</li>
+            <li>{{step}}</li>
             {% endfor %}
          </ul>
       </div>
