--- a/src/app/views/recipes/index.njk
+++ b/src/app/views/recipes/index.njk
@@ -14,7 +14,7 @@
          <img src="{{recipe.image}}" alt="">
          <div class="card-info">
             <h3>{{ recipe.title }}</h3>
-            <p>por: {{ recipe.author }}</p>
+            <p>por: {{recipe.chef_name}}</p>
             <a href="recipes/{{recipe.id}}">Visualizar</a>
          </div>
       </li>
