--- a/src/app/views/recipes/edit.njk
+++ b/src/app/views/recipes/edit.njk
@@ -8,15 +8,16 @@
 
    <h2>Editando receita</h2>
 
-   <form class="card" method="POST" action="/admin/recipes?_method=PUT">
+   <form class="card" method="POST" action="/recipes?_method=PUT">
       
       {% include "recipes/fields.njk" %}
 
+      <input type="hidden" name="id" value={{recipe.id}}>
       <button class="button" type="submit">Salvar</button>
       
    </form>
 
-   <form class="card" id="form-delete" method="POST" action="/admin/recipes?_method=DELETE">
+   <form class="card" id="form-delete" method="POST" action="/recipes?_method=DELETE">
       <input type="hidden" name="id" value={{recipe.id}}>
       <button class="delete-button" type="submit">Deletar</button>
    </form>
