--- a/src/app/views/chefs/create.njk
+++ b/src/app/views/chefs/create.njk
@@ -10,6 +10,8 @@
    <form class="card" method="POST" action="/chefs">
       
       {% include "chefs/fields.njk" %}
+
+   <button type="button">Salvar</button>
       
    </form>
 </div>
