--- a/src/app/views/chefs/create.njk
+++ b/src/app/views/chefs/create.njk
@@ -11,7 +11,7 @@
       
       {% include "chefs/fields.njk" %}
 
-   <button type="button">Salvar</button>
+   <button class="button" type="submit">Salvar</button>
       
    </form>
 </div>
