--- a/src/app/views/chefs/edit.njk
+++ b/src/app/views/chefs/edit.njk
@@ -16,7 +16,7 @@
       
    </form>
 
-   <form class="card" id="form-delete" method="POST" action="/recipes?_method=DELETE">
+   <form class="card" id="form-delete" method="POST" action="/chefs?_method=DELETE">
       <input type="hidden" name="id" value={{chef.id}}>
       <button class="delete-button" type="submit">Deletar</button>
    </form>
