Adding top-content into recipe's show page

--- a/src/app/views/recipes/show.njk
+++ b/src/app/views/recipes/show.njk
@@ -5,6 +5,13 @@
 {% include "parts/header.njk" %}
 
 <div class="container show">
+   <div class="top-content">
+      <h2>Receita: {{recipe.title}}</h2>
+      <a href="/recipes/{{recipe.id}}/edit">
+         <button class="button">Editar</button>
+      </a>
+   </div>
+   
    <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
 
    <div class="presentation">
