--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -1,5 +1,18 @@
-<header id="general-header">
-   <a href="/">
-      <img src="/images/logo.png" alt="">
-   </a>
+<header>
+   <div class="logo">
+      <a href="/">
+         <img src="/images/logo.png" alt="">
+      </a>
+   </div>
+
+   <div class="links">
+      <ul>
+         <li>
+            <a href="/recipes">Receitas</a>
+         </li>
+         <li>
+            <a href="/chefs">Chefs</a>
+         </li>
+      </ul> 
+   </div>
 </header>
