--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -4,10 +4,13 @@
 
 .container #home-header {
    padding-top: 30px;
+   padding-bottom: 0;
    margin-bottom: 30px;
    
    justify-content: center;
    position: relative;
+
+   background-color: #f9f9f9;
 }
 
 .container #home-header > a:nth-child(1) {
