--- a/public/styles/recipes.css
+++ b/public/styles/recipes.css
@@ -46,6 +46,12 @@
 
 /** RECIPES SHOW **/
 
+.top-content h2 {
+   font-size: 24px;
+
+   margin-bottom: 51px;
+}
+
 /* presentation */
 
 .container.show img {
