--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -9,6 +9,7 @@
       </a>
       <a href="#">Sobre</a>
       <a href="/recipes">Receitas</a>
+      <a href="/chefs">Chefs</a>
    </header>
    
    <section class="presentation-card">
@@ -28,11 +29,11 @@
          <ul>
             {% for recipe in recipes %}
             <li class="card">
-               <a href="admin/recipes/{{ recipe.id }}">
-               <img src="{{ recipe.image }}" alt="{{ recipe.title }}">
+               <a href="admin/recipes/{{recipe.id}}">
+                  <img src="{{recipe.image}}" alt="{{recipe.title}}">
                </a>
-               <a href="admin/recipes/{{ recipe.id }}">{{ recipe.title }}</a>
-               <p>por: {{ recipe.author }}</p>
+               <a href="admin/recipes/{{recipe.id}}">{{recipe.title}}</a>
+               <p>por: {{recipe.chef_name}}</p>
             </li>
             {% endfor %}
          </ul>
