--- a/src/app/views/chefs/create.njk
+++ b/src/app/views/chefs/create.njk
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-{% include "parts/header.njk" %}
+{% include "parts/admin-header.njk" %}
 
 <div class="container fields-container">
    <h2>Novo Chef</h2>
 
-   <form class="card" method="POST" action="/chefs">
+   <form class="card" method="POST" action="/admin/chefs">
       
       {% include "chefs/fields.njk" %}
 
