--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -16,5 +16,10 @@
    {% block content %}{% endblock %}
 
    {% include "parts/footer.njk" %}
+
+   <script> 
+      console.log(currentPage) 
+      console.log(menuItems) 
+   </script>
 </body>
 </html>
