--- a/src/app/views/home/chefs.njk
+++ b/src/app/views/home/chefs.njk
@@ -2,11 +2,10 @@
 
 {% block content %}
 
-{% include "parts/admin-header.njk" %}
-
 <div class="container chefs-container">
-   <h1>Gerenciar Chefs</h1>
-   
+
+   {% include "parts/home-header.njk" %}
+      
    <ul id="chefs">
       {% for chef in chefs %}
       
@@ -14,7 +13,14 @@
          <span style="background-image: url({{chef.image}})"></span>
          <div class="info">
             <h4>{{chef.name}}</h4>
-            <a href="/admin/chefs/{{chef.id}}">Visualizar</a>
+            <p>
+               {{chef.total_recipes}} 
+               {% if chef.total_recipes != 1 %}
+               receitas
+               {% else %}
+               receita
+               {% endif %}
+            <p>
          </div>
       </li>
 
