--- a/src/app/views/home/recipes.njk
+++ b/src/app/views/home/recipes.njk
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-{% include "parts/admin-header.njk" %}
 
 <div class="container recipes-container">
-   <h2>Gerenciar receitas</h2>
+   
+   {% include "parts/home-header.njk" %}
 
    <ul id="recipe-list">
       {% for recipe in recipes %}
@@ -15,7 +15,7 @@
          <div class="card-info">
             <h3>{{ recipe.title }}</h3>
             <p>por: {{recipe.chef_name}}</p>
-            <a href="/admin/recipes/{{recipe.id}}">Visualizar</a>
+            <a href="recipes/{{recipe.id}}">Visualizar</a>
          </div>
       </li>
       
