--- a/public/styles/parts.css
+++ b/public/styles/parts.css
@@ -53,7 +53,7 @@
    top: 25px;
 }
 
-/* menu */
+/* header menu */
 
 #admin-header .menu {
    position: absolute;
@@ -107,4 +107,72 @@ footer p {
    margin-top: auto;
    font-size: 14px;
    color: #999999;
+}
+
+/** HOME SEARCH **/
+
+form .search-home input {
+   width: 246px;
+   height: 37px;
+
+   font-size: 14px;
+   color: #999999;
+
+   border: 1px solid #DDDDDD;
+   border-radius: 4px;
+   padding-left: 11px;
+
+   position: absolute;
+   top: 28px;
+   right: 100px;
+}
+
+form .search-home button {
+   position: absolute;
+   top: 28px;
+   right: 0;
+
+   width: 91px;
+   height: 37px;
+}
+
+/** RECIPES CARDS **/
+
+.recipes-cards h2 {
+   font-size: 24px;
+   font-weight: bold;
+
+   margin-bottom: 20px;
+}
+
+.recipes-cards .cards ul {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   grid-gap: 20px;
+
+   margin-bottom: 50px;
+}
+
+.recipes-cards .cards .card img {
+   width: 300px;
+   height: 140px;
+
+   border-radius: 15px;
+   margin-bottom: 20px;
+
+   object-fit: cover;
+   cursor: pointer;
+}
+
+.recipes-cards .cards .card a {
+   font-size: 18px;
+   color: #111111;
+
+   padding-bottom: 5px;
+}
+
+
+.recipes-cards .cards .card p {
+   font-size: 14px;
+   color: #777777;
 }
