--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -1,11 +1,17 @@
 {% extends "layout.njk" %}
+{% import "parts/search-bar.njk" as search %}
+{% import "parts/recipes-cards.njk" as cards %}
 
 {% block content %}
 
 <div class="container">
    
    {% include "parts/home-header.njk" %}
-   
+
+   <form action="/search">
+      {{search.form('search-home')}}
+   </form>
+
    <section class="presentation-card">
       <div class="presentation-message">
          <h1>As melhores receitas</h1>
@@ -16,22 +22,12 @@
       </div>
       <img src="/images/chef.png" alt="chef figure">
    </section>
-   <section class="most-accessed">
-      <h2>Mais acessadas</h2>
-      <div class="square"></div>
-      <div class="cards">
-         <ul>
-            {% for recipe in recipes %}
-            <li class="card">
-               <a href="admin/recipes/{{recipe.id}}">
-                  <img src="{{recipe.image}}" alt="{{recipe.title}}">
-               </a>
-               <a href="admin/recipes/{{recipe.id}}">{{recipe.title}}</a>
-               <p>por: {{recipe.chef_name}}</p>
-            </li>
-            {% endfor %}
-         </ul>
-      </div>
+   
+   <section class="recipes-cards"> 
+      <h2>Mais Acessadas</h2>
+
+      {{cards.render(recipes)}}
+      
    </section>
 </div>
 
