Frontend paination logic

--- a/src/app/views/home/recipes.njk
+++ b/src/app/views/home/recipes.njk
@@ -20,6 +20,15 @@
       
       {% endfor %}
    </ul>
+
+   <div 
+      class="pagination"
+      data-page={{pagination.page}}
+      data-total={{pagination.total}}
+   >
+   </div>
+      
+   </div>
 </div>
 
 {% endblock %}
