--- a/src/app/views/parts/recipes-cards.njk
+++ b/src/app/views/parts/recipes-cards.njk
@@ -4,10 +4,8 @@
    <ul>
       {% for recipe in recipes %}
       <li class="card">
-         <a href="admin/recipes/{{recipe.id}}">
-            <img src="{{recipe.image}}" alt="{{recipe.title}}">
-         </a>
-         <a href="admin/recipes/{{recipe.id}}">{{recipe.title}}</a>
+         <img src="{{recipe.image}}" alt="{{recipe.title}}">
+         <h4>{{recipe.title}}<p>
          <p>por: {{recipe.chef_name}}</p>
       </li>
       {% endfor %}
