--- a/src/app/views/parts/home-header.njk
+++ b/src/app/views/parts/home-header.njk
@@ -7,7 +7,7 @@
       <div class="menu">
          <ul>
             <li> <a href="/home">Sobre</a> </li>
-            <li> <a href="/recipes?page=">Receitas</a> </li>
+            <li> <a href="/recipes">Receitas</a> </li>
             <li> <a href="/chefs">Chefs</a> </li>
          </ul>
       </div>
