--- a/src/app/views/recipes/index.njk
+++ b/src/app/views/recipes/index.njk
@@ -23,4 +23,11 @@
    </ul>
 </div>
 
+<div 
+   class="pagination"
+   data-page={{pagination.page}}
+   data-total={{pagination.total}}
+>
+</div>
+
 {% endblock %}
