--- a/public/styles/fields.css
+++ b/public/styles/fields.css
@@ -41,9 +41,11 @@
 }
 
 .item .add {
+   font-weight: 700;
    font-size: 14px;
    color: #6558C3;
 
+   margin-left: 2px;
    margin-bottom: 40px;
 }
 
@@ -64,4 +66,123 @@
    font-size: 16px;
    color: rgb(39, 38, 38) ;
    font-family: 'Roboto', sans-serif;
+}
+
+/** IMAGES **/
+
+.item .images {
+   display: flex;
+   flex-direction: row;
+   
+   margin-bottom: 45px;
+}
+
+/* images upload */
+
+.item .images-upload {
+   width: 150px;
+   height: 150px;
+
+   border: 1px solid #DDDDDD;
+   border-radius: 3.5px;
+   margin-right: 0;
+   
+   position: relative;
+}
+
+.item .images-upload:hover {
+   border: 2px solid #999999;
+}
+
+.item .images-upload #images-input {
+   width: 100%;
+   height: 180px;
+
+   opacity: 0;
+   padding: 0;
+   margin: 0;
+
+   position: absolute;
+   top: -30px;
+   
+   cursor: pointer;
+   z-index: 1;
+}
+
+.images i {
+   position: absolute;
+   top: 0;
+   left: 0;
+
+   width: 100%;
+   height: 100%;
+   
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   
+   font-size: 28px;
+   color: #DDDDDD;
+}
+
+.images-upload:hover i {
+   color: #999999;
+}
+
+.item div p {
+   position: absolute;
+   top: 100%;
+
+   font-size: 12px;
+   color: #999999;
+
+   margin-top: 5px;
+   margin-left: 16px;
+}
+
+/* images preview */
+
+#images-preview {
+   display: flex;
+   flex-direction: row;
+}
+
+#images-preview .image {
+   position: relative;
+   width: 150px;
+   height: 150px;
+
+   margin-left: 10px;
+}
+
+
+#images-preview img {
+   width: 100%;
+   height: 100%;
+
+   object-fit: cover;
+   object-position: center;
+
+   border: 1px solid #DDDDDD;
+   border-radius: 3.5px;
+
+   transition: 400ms;
+}
+
+#images-preview i {
+   transform: rotate(-45deg);
+   color: #FF0000;
+
+   opacity: 0;
+
+   transition: 200ms;
+}
+
+#images-preview:hover img {
+   opacity: 0.15;
+}
+
+#images-preview:hover i {
+   opacity: 1;
+   cursor: pointer;
 }
